# fixie-sdk-js

./: .gitignore  .gitmodules  .prettierignore  .yarnrc.yml  404.html  Justfile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  package.json  pyproject.toml  search.html  setup.py  sitemap.xml  turbo.json
.changeset/: bright-olives-raise.md  honest-bulldogs-explode.md  nice-years-roll.md  slow-mayflies-divide.md  unlucky-actors-boil.md
.github/workflows/: build.yml  nodejs-tests.yml  tests.yml
agent-protocol/: index.html
agent-quickstart/: index.html
agents/: index.html
architecture/: index.html
cli/: index.html
css/: custom.css
developer-preview/: index.html
docs/: CNAME  agent-protocol.md  agent-quickstart.md  agents.md  api-agents.md  api-client.md  api.md  architecture.md  cli.md  developer-preview.md  docs-readme.md  document-qa.md  early.md  index.md  langchain.md  python-agent-api.md  python-client-api.md  quickstart.md  ts.md
docs-readme/: index.html
docs/css/: custom.css
document-qa/: index.html
examples/: simple.py
examples/agents/: coinflip.py  langchain_agent_zero_shot.py  randint.py  shout.py  simpleagent.py
examples/client/: simple.py
fixie/: __init__.py  client.py  client_test.py  console.py  constants.py  main.py  playground.py  session.py
fixie/agents/: __init__.py  api.py  code_shot.py  code_shot_test.py  user_storage.py  user_storage_test.py  utils.py  utils_test.py
fixie/client/: __init__.py  client.py  client_test.py  console.py  session.py
fixieai/: __init__.py  constants.py
fixieai/agents/: __init__.py  agent_base.py  agent_base_test.py  agent_func.py  agent_func_test.py  api.py  api_test.py  code_shot.py  code_shot_test.py  corpora.py  corpora_test.py  exceptions.py  llm_settings.py  metadata.py  oauth.py  openai_proxy.py  openai_proxy_test.py  standalone.py  standalone_test.py  token.py  user_storage.py  user_storage_test.py  utils.py  utils_test.py
fixieai/agents-ts/: .eslintignore  .eslintrc.cjs  .gitignore  README.md  dprint.json  empty-bin.js  jest.config.js  package-lock.json  package.json  tsconfig-base.json  tsconfig.json
fixieai/agents-ts/src/: codeshot.ts  embed.ts  index.ts  serve-bin.ts  serve.ts  template.ts  user-storage.ts
fixieai/agents-ts/src/__tests__/: embed.ts  serve.ts  tsconfig.json
fixieai/agents-ts/src/fixtures/: agent.yaml  index.ts
fixieai/agents-ts/src/fixtures/normal/: README.md  chart-data.txt  index.ts
fixieai/agents-ts/src/fixtures/watch/: agent.yaml  index.ts
fixieai/cli/: agent_config.py  auth.py  cli.py  console.py  utils.py  utils_test.py  validators.py
fixieai/cli/agent/: agent_config.py  agent_config_test.py  commands.py  commands_test.py  loader.py  tunnel.py
fixieai/cli/auth/: commands.py  oauth_flow.py  user_config.py  user_config_test.py
fixieai/cli/session/: commands.py  console.py
fixieai/client/: __init__.py  agent.py  client.py  client_test.py  console.py  session.py  utils.py
fixieai/ferry-schedule-ts/: .gitignore  agent.yaml  index.ts  package-lock.json  package.json  tsconfig.json
fixieai/ts/.github/workflows/: tests.yml
fixieai/ts/src/: codeshot.ts
langchain/: index.html
llamalabs/: __init__.py  agent.py  agent_test.py  client.py  client_test.py  console.py  constants.py  defaults.py  main.py  session.py
llamalabs/agents/: __init__.py  api.py  code_shot.py  code_shot_test.py  user_storage.py  user_storage_test.py  utils.py  utils_test.py
llamalabs/client/: __init__.py  client.py  client_test.py  console.py  session.py
python-agent-api/: index.html
python-client-api/: index.html
search/: search_index.json
theme/: main.html
