[tool.poetry]
name = "fixieai"
version = "0.1.8"
description = "SDK for the Fixie.ai platform. See: https://fixie.ai"
authors = ["Fixie.ai Team <hello@fixie.ai>"]
packages = [
    { include = "fixieai/" },
]

[build-system]
requires = ["poetry>=1.2.1"]
build-backend = "poetry.masonry.api"

# Install the "fixie" commandline script.
[tool.poetry.scripts]
fixie = "fixieai.client.console:fixie"

[tool.poetry.dependencies]
click = "^8.1.3"
fastapi = { version = "^0.89.1", extras = ["all"] }
gql = { version = "^3.4.0", extras = ["all"] }
python = "^3.8"
prompt-toolkit = "^3.0.31"
pydantic = "*"
PyJWT = "^2.6.0"
requests = "^2.28.1"
rich = "^12.6.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "3.10.0"
pytest-xdist = "3.0.2"
black = "22.8.0"
isort = "5.10.1"
mypy = "0.991"
autoflake = "1.6.1"
requests-mock = "1.10.0"
mkdocs = "^1.4.2"
mkdocstrings = { version = "^0.20.0", extras = ["python"] }
mkdocs-click = "^0.8.0"
mkdocs-material = "^7.3"
mkdocs-windmill = "^1.0.5"
mkdocs-cinder = "^1.2.0"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
plugins = [ "pydantic.mypy" ]

[tool.isort]
profile = "black"
single_line_exclusions = ["typing", "collections.abc", "typing_extensions"]
skip = ["venv", "third_party"]

[tool.black]
extend-exclude = '''
/(
  | third_party
  | venv
)/
'''
