[tool.poetry]
name = "fixieai"
version = "0.2.20"
description = "SDK for the Fixie.ai platform. See: https://fixie.ai"
authors = ["Fixie.ai Team <hello@fixie.ai>"]
packages = [
    { include = "fixieai/" },
]

[build-system]
requires = ["poetry>=1.2.1"]
build-backend = "poetry.masonry.api"

# Install the "fixie" commandline script.
[tool.poetry.scripts]
fixie = "fixieai.cli.cli:fixie"
fixieai = "fixieai.cli.cli:fixie"

[tool.poetry.dependencies]
click = "^8.1.3"
fastapi = { version = "^0.89.1" }
uvicorn = { version = "^0.20.0", extras = ["standard"] }
gql = { version = "^3.4.0", extras = ["requests"] }
python = "^3.8"
prompt-toolkit = "*"
pydantic = "*"
PyJWT = { version = "^2.6.0", extras = ["crypto"] }
requests = "^2.28.1"
rich = "^12.6.0"
dataclasses-json = "^0.5.7"
validators = "^0.20.0"
oauth2-client = "^1.3.0"
Pillow = "*"
python-dotenv = "^1.0.0"
packaging = "^23.0"
wrapt = "^1.15.0"
urllib3 = ">=1,<2" # gql requires requests_toolbelt < 1 which requires urllib3 < 2.0

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "3.10.0"
pytest-xdist = "3.0.2"
black = "22.8.0"
isort = "5.10.1"
mypy = "1.0.1"
autoflake = "1.6.1"
requests-mock = "1.10.0"
mkdocs = "^1.4.2"
mkdocstrings = { version = "^0.20.0", extras = ["python"] }
mkdocs-click = "^0.8.0"
mkdocs-material = "^7.3"
mkdocs-windmill = "^1.0.5"
mkdocs-cinder = "^1.2.0"
fastapi = { version = "^0.89.1", extras = ["all"] }
types-setuptools = "^67.6.0.7"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = [ "pydantic.mypy" ]
exclude = [ "fixie-examples" ]

[[tool.mypy.overrides]]
module = ["validators", "oauth2_client"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
single_line_exclusions = ["typing", "collections.abc", "typing_extensions"]
skip = ["venv", "third_party", "fixie-examples"]

[tool.black]
extend-exclude = '''
/(
  | fixie-examples
  | third_party
  | venv
)/
'''
